--- a/Amos/homework6.sunplant-store-re-slicing/sunplant-store.html
+++ b/Amos/homework6.sunplant-store-re-slicing/sunplant-store.html
@@ -34,8 +34,7 @@
                         <div class="text text-login">LOGIN</div>
                     </div>
                 </div>
-
-                <nav class="nav nav-list">
+                <nav class="item item-nav">
                     <ul class="ul-nav ul-nav-lv1">
                         <li class="li-nav li-nav-lv1">
                             <a href="#" class="link-nav link-nav-lv1">Home</a>
@@ -184,15 +183,73 @@
                         <li class="li-nav li-nav-lv1">
                             <a href="#" class="link-nav link-nav-lv1">PAGES</a>
                             <span class="wrap-control wrap-control-lv1">></span>
-                            <ul class="ul-nav ul-nav-lv2"></ul>
+                            <ul class="ul-nav ul-nav-lv2">
+                                <li class="li-nav li-nav-lv2">
+                                    <a href="#" class="link-nav link-nav-lv2">About Us</a>
+                                </li>
+                                <li class="li-nav li-nav-lv2">
+                                    <a href="#" class="link-nav link-nav-lv2">Contact Us</a>
+                                </li>
+                                <li class="li-nav li-nav-lv2">
+                                    <a href="#" class="link-nav link-nav-lv2">Wishlist</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="li-nav li-nav-lv1">
                             <a href="#" class="link-nav link-nav-lv1">ELEMENT</a>
                             <span class="wrap-control wrap-control-lv1">></span>
-                            <ul class="ul-nav ul-nav-lv2"></ul>
+                            <ul class="ul-nav ul-nav-lv2">
+                                <li class="li-nav li-nav-lv2">
+                                    <a href="#" class="link-nav link-nav-lv2">MAIN STYLE</a>
+                                    <ul class="nav ul-nav-lv3">
+                                        <li class="li-nav li-nav-lv3">
+                                            <a href="#" class="link-nav link-nav-lv3">No Sidebar</a>
+                                        </li>
+                                        <li class="li-nav li-nav-lv3">
+                                            <a href="#" class="link-nav link-nav-lv3">Default - Menu right</a>
+                                        </li>
+                                        <li class="li-nav li-nav-lv3">
+                                            <a href="#" class="link-nav link-nav-lv3">Minimal</a>
+                                        </li>
+                                        <li class="li-nav li-nav-lv3">
+                                            <a href="#" class="link-nav link-nav-lv3">Classic</a>
+                                        </li>
+                                        <li class="li-nav li-nav-lv3">
+                                            <a href="#" class="link-nav link-nav-lv3">Mordern</a>
+                                        </li>
+
+                                    </ul>
+                                </li>
+                                <li class="li-nav li-nav-lv2">
+                                    <a href="#" class="link-nav link-nav-lv2">POST FORMAT</a>
+                                    <ul class="nav ul-nav-lv3">
+                                        <li class="li-nav li-nav-lv3">
+                                            <a href="#" class="link-nav link-nav-lv3">Elementor</a>
+                                        </li>
+                                        <li class="li-nav li-nav-lv3">
+                                            <a href="#" class="link-nav link-nav-lv3">Logo on menu</a>
+                                        </li>
+                                        <li class="li-nav li-nav-lv3">
+                                            <a href="#" class="link-nav link-nav-lv3">Default - Menu Left</a>
+                                        </li>
+                                        <li class="li-nav li-nav-lv3">
+                                            <a href="#" class="link-nav link-nav-lv3">Logo in menu</a>
+                                        </li>
+
+                                    </ul>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </nav>
+                <div class="item item-close">
+                    <div class="box box-close">
+                        <div class="icon icon-close"><i class="fa-solid fa-xmark"></i></div>
+                        <div class="text text-close">CLOSE</div>
+                    </div>
+                </div>
+
+
             </div>
             <div class="container container-logo"></div>
             <div class="container container-person"></div>
