--- a/Amos/Universal/Universal.html
+++ b/Amos/Universal/Universal.html
@@ -19,17 +19,7 @@
 <body>
     <header class="header header-sunplate">
         <div class="wrap wrap-header">
-            <div class="group group-hamburger">
-                <div class="item item-hamburger">
-                    <label for="switch-group-nav" class="icon icon-hamburger">
-                        <span class="hamburger-line hambuerger-line-top"></span>
-                        <span class="hamburger-line hambuerger-line-center"></span>
-                        <span class="hamburger-line hambuerger-line-bottom"></span>
-                    </label>
-                </div>
-            </div>
-            <input type="checkbox" name="" id="group-switch">
-            <div class="group group-nav">
+            <div class="container container-nav">
                 <div class="item item-switch">
                     <div class="box box-menu">
                         <div class="icon icon-hamburger">
@@ -273,18 +263,11 @@
                         <div class="text text-close">CLOSE</div>
                     </div>
                 </div>
+
+
             </div>
-            <div class="group group-logo">
-                <div class="item item-logo">
-                    <a href="./sunplant-store.html" title="SunPlate" class="logo-link">
-                        <h1 class="logo-title">SunPlate</h1>
-                        <img src="./pic/logo.webp" alt="" class="logo-img">
-                    </a>
-                </div>
-            </div>
-            <div class="group group-user">
-                <div class="item item-user"></div>
-            </div>
+            <div class="container container-logo"></div>
+            <div class="container container-person"></div>
         </div>
 
     </header>
