--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="./Amos/homework6.sunplant-store/sunplant-store.html">我是 sunplant-store 切版作業</a>
         </li>
         <li>
-            <a href="./Amos/homework6.sunplant-store-re-slicing/">我是 re-sunplant-store 切版作業</a>
+            <a href="./Amos/homework6.sunplant-store-re-slicing/sunplant-store.html">我是 re-sunplant-store 切版作業</a>
         </li>
         <li></li>
         <li></li>
