--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
     </ol>
 
     <ol>
-        <li><a href="./JavaScript/homework1.SelfIntroduction/index.html">我是 JavaScript 自我介紹</a></li>
-        <li></li>
+        <li>
+            <a href="./JavaScript/homework1.SelfIntroduction/index.html">我是 JavaScript 自我介紹</a>
+        </li>
+        <li>
+            <a href="./JavaScript/homework2.marketingShare/marketingShare.html"></a>
+        </li>
         <li></li>
         <li></li>
         <li></li>
