--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="./JavaScript/homework1.SelfIntroduction/index.html">我是 JavaScript 自我介紹</a>
         </li>
         <li>
-            <a href="./JavaScript/homework2.marketingShare/marketingShare.html"></a>
+            <a href="./JavaScript/homework2.marketingShare/marketingShare.html">我是 marketingShare chart & table</a>
         </li>
         <li></li>
         <li></li>
