--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <li>
             <a href="./JavaScript/homework2.marketingShare/marketingShare.html">我是 marketingShare chart & table</a>
         </li>
-        <li></li>
-        <li></li>
+        <li><a href="./JavaScript/homework3.GuessNumber/GuessNumber.html">我是1A2B</a></li>
+        <li><a href="./JavaScript/homework3.GuessPassword/GuessPassword.html">我是猜數字</a></li>
         <li></li>
         <li></li>
         <li></li>
