--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         </li>
         <li><a href="./JavaScript/homework3.GuessNumber/GuessNumber.html">我是1A2B</a></li>
         <li><a href="./JavaScript/homework3.GuessPassword/GuessPassword.html">我是猜數字</a></li>
-        <li></li>
+        <li>
+            <a href="./JavaScript/homework3.AppleStore/AppleStore/AppleStore.html">半殘 Apple</a>
+        </li>
         <li></li>
         <li></li>
         <li></li>
