--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <li>
             <a href="./JavaScript/homework3.AppleStore/AppleStore/AppleStore.html">半殘 Apple</a>
         </li>
-        <li></li>
+        <li>
+            <a href="./JavaScript/homework5.LoLCard/LoLCard.html"></a>
+        </li>
         <li></li>
         <li></li>
         <li></li>
