--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a href="./JavaScript/homework3.AppleStore/AppleStore/AppleStore.html">半殘 Apple</a>
         </li>
         <li>
-            <a href="./JavaScript/homework5.LoLCard/LoLCard.html"></a>
+            <a href="./JavaScript/homework5.LoLCard/LoLCard.html">LoL 牌卡</a>
         </li>
         <li></li>
         <li></li>
