--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a href="./JavaScript/homework5.LoLCard/LoLCard.html">LoL 牌卡</a>
         </li>
         <li></li>
-        <li></li>
+        <li><a href="./Topic/PawsDay/loginregister.html">專題login</a></li>
         <li></li>
         <li></li>
     </ol>
