--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </li>
         <li></li>
         <li><a href="./Topic/PawsDay/loginregister.html">專題login</a></li>
-        <li></li>
+        <li><a href="./Topic/PawsDay/support/home.html">support</a></li>
         <li></li>
     </ol>
 </body>
