--- a/Topic/PawsDay/loginregister.html
+++ b/Topic/PawsDay/loginregister.html
@@ -13,15 +13,9 @@
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/3807b66583.js" crossorigin="anonymous"></script>
 
-    <style>
-        /* reset */
-
-
-        /* ------------------------------------------------------------------------- */
-    </style>
-
-
+    <link rel="stylesheet" href="./style/pawsday.css">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/loginregister.css">
 </head>
 
 <body>
