--- a/Topic/PawsDay/support/consumerproblem.html
+++ b/Topic/PawsDay/support/consumerproblem.html
@@ -61,33 +61,33 @@
                     <div class="col-12 col-md-6 mb-5">
                         <h3 class="title">註冊</h3>
                         <ul>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
                         </ul>
                     </div>
                     <div class="col-12 col-md-6 mb-5">
                         <h3 class="title">註冊</h3>
                         <ul>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
                         </ul>
                     </div>
                     <div class="col-12 col-md-6 mb-5">
                         <h3 class="title">註冊</h3>
                         <ul>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
                         </ul>
                     </div>
                     <div class="col-12 col-md-6 mb-5">
                         <h3 class="title">註冊</h3>
                         <ul>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
-                            <li><a href="#" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
+                            <li><a href="./answer.html" class="item-link">如何註冊 PawsDay</a></li>
                         </ul>
                     </div>
                 </div>
