update support link

--- a/Topic/PawsDay/support/home.html
+++ b/Topic/PawsDay/support/home.html
@@ -82,9 +82,10 @@
                                     <span class="text">保母常見說明</span>
                                 </a>
                             </div>
-                            <div class="col-12 col-md-6  col-xl-4"> <a href="./invoiceproblem.html"
+                            <div class="col-12 col-md-6  col-xl-4">
+                                <a href="./invoiceproblem.html"
                                     class="list-group-item list-group-item-action d-flex align-items-center rounded ">
-                                    <img class="icon" src="../pic/Invoice.png" alt="">
+                                    <img class="icon" src="../pic/invoice.png" alt="">
                                     <span class="text">發票常見說明</span>
                                 </a>
                             </div>
