--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
         <li><a href="./Topic/PawsDay/support/home.html">support</a></li>
         <li></li>
     </ol>
+
+
+    <img src="./MVC/94917824_10213191804268838_2406204583761149952_n.jpg" alt="">
+
 </body>
 
 </html>
+
+<img src="https://picsum.photos/300/200/?random=10">
